# xiao_tian_ling_dog_tacker_1

./: README.md
c_modules/fqueue/: CMakeLists.txt
c_modules/fqueue/include/: fqueue.h
c_modules/fqueue/src/: fqueue.c
c_modules/imu/: CMakeLists.txt
c_modules/imu/include/: imu.h
c_modules/imu/src/: imu.c
c_modules/json/: CMakeLists.txt
c_modules/json/include/: d1_json.h
c_modules/json/src/: d1_json.c  d1_json_shell.c
c_modules/modem/: CMakeLists.txt
c_modules/modem/include/: gps.h  modem.h  modem_interface_types.h  modem_spi.h
c_modules/modem/src/: gps.c  modem.c  modem_init.c  modem_shell.c  modem_spi.c
c_modules/pmic/: CMakeLists.txt
c_modules/pmic/include/: pmic.h  pmic_leds.h
c_modules/pmic/src/: battery_model.inc  pmic.c  pmic_leds.c  pmic_shell.c
c_modules/tde/: CMakeLists.txt
c_modules/tde/src/: tde_shell.c
c_modules/uicr/: CMakeLists.txt
c_modules/uicr/include/: uicr.h
c_modules/uicr/src/: uicr.c
c_modules/utils/: CMakeLists.txt
c_modules/utils/include/: utils.h  wi.h
c_modules/utils/src/: utils.c  wi.c
c_modules/watchdog/: CMakeLists.txt
c_modules/watchdog/include/: watchdog.h
c_modules/watchdog/src/: watchdog.c  watchdog_shell.c
mfg_shell/: CMakeLists.txt  Kconfig  Makefile  nrf5340dk_nrf5340_cpuapp_mfg.overlay  prj.conf
mfg_shell/child_image/mcuboot/boards/: nrf5340dk_nrf5340_cpuapp.overlay
mfg_shell/src/: board.c  main.c  shell.c  utils.c
mfg_shell/src/ble/: CMakeLists.txt
mfg_shell/src/ble/include/: ble.h
mfg_shell/src/ble/src/: ble.c
mfg_shell/src/include/: app_version.h  utils.h
mfg_shell/src/modem/: CMakeLists.txt
mfg_shell/src/modem/include/: modem.h  modem_spi.h  modem_uart.h
mfg_shell/src/modem/src/: modem.c  modem_init.c  modem_shell.c  modem_spi.c  modem_uart.c
mfg_shell/src/rffe/: CMakeLists.txt
mfg_shell/src/rffe/include/: rffe.h
mfg_shell/src/rffe/src/: rffe.c  rffe_shell.c
mfg_shell/src/wifi/: CMakeLists.txt
mfg_shell/src/wifi/include/: wifi.h  wifi_spi.h  wifi_uart.h
mfg_shell/src/wifi/src/: wifi.c  wifi_shell.c  wifi_spi.c  wifi_uart.c
